--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 </ul>
               </nav>
             </div>
-            <div class="mt-3" data-aos="fade-up" data-aos-delay="200"><a class="btn btn-primary shadow-sm mt-1 hover-effect" href="https://wa.me/qr/FTZWIPM776MMC1">Contact Me  <i class="fas fa-comments"></i></a></div>
+            <div class="mt-3" data-aos="fade-up" data-aos-delay="200"><a class="btn btn-primary shadow-sm mt-1 hover-effect" href="https://api.whatsapp.com/send/?phone=%2B923453191638&text&app_absent=0">Contact Me  <i class="fas fa-comments"></i></a></div>
           </div>
         </div>
       </div>
