--- a/index.html
+++ b/index.html
@@ -393,12 +393,17 @@
     <script src="./scripts/aos.min.js?ver=1.2.0"></script>
     <script src="./scripts/main.js?ver=1.2.0"></script>
     <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
-<df-messenger
-  intent="WELCOME"
-  chat-title="Talk To Hammad😍"
-  
-  agent-id="69e3d4d5-d275-4340-be04-b041c8726212"
-  language-code="en"
-></df-messenger>
+
+<script type="text/javascript">
+        (function(d, m){
+            var kommunicateSettings = 
+                {"appId":"21cebf520439741cfc9000276c395898a","popupWidget":true,"automaticChatOpenOnNavigation":true};
+            var s = document.createElement("script"); s.type = "text/javascript"; s.async = true;
+            s.src = "https://widget.kommunicate.io/v2/kommunicate.app";
+            var h = document.getElementsByTagName("head")[0]; h.appendChild(s);
+            window.kommunicate = m; m._globals = kommunicateSettings;
+        })(document, window.kommunicate || {});
+    /* NOTE : Use web server to view HTML files as real-time update will not work if you directly open the HTML file in the browser. */
+    </script>
   </body>
 </html>
