--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
     <div class="row">
       <div class="col-md-6">
         <h2 class="h4 my-2">Hello! I’m Hammad sheikh</h2>
-        <p>I am passionate about UI/UX design and Web Design. I am a skilled front-end developer and master of graphic design tools such as Photoshop and Sketch. I am a quick learner and a team worker that gets the job done. I can easily capitalize on low hanging fruits and quickly maximize timely deliverables for real-time schemas.</p>
+        <p> I am Web and Natural Language processing (NLP) developer usually Working on making Chatbots and voice bots and make them an omniverse channel through integrating it social media and diffrent platforms like facebook messanger, whatsapp, Telegram, LINE or etc.
+          I am a quick learner and a team worker that gets the job done. I can easily capitalize on low hanging fruits and quickly maximize timely deliverables for real-time schemas as a web and NLP Developer </p>
         <div class="row mt-3">
           <div class="col-sm-2">
             <div class="pb-1">Age:</div>
