--- a/index.html
+++ b/index.html
@@ -151,13 +151,13 @@
         <div class="h5">Web Design</div>
       </div>
       <div class="col-md-3 text-center" data-aos="fade-up" data-aos-delay="100"><img class="mb-2" src="images/services/web-design.svg" width="96" height="96" alt="web design"/>
-        <div class="h5">3D Photography</div>
+        <div class="h5">Natural Language Processing</div>
       </div>
       <div class="col-md-3 text-center" data-aos="fade-up" data-aos-delay="300"><img class="mb-2" src="images/services/ui-ux.svg" width="96" height="96" alt="ui-ux"/>
-        <div class="h5">Content Writing</div>
+        <div class="h5"> Web Development </div>
       </div>
       <div class="col-md-3 text-center" data-aos="fade-up" data-aos-delay="400"><img class="mb-2" src="images/services/app-development.svg" width="96" height="96" alt="app development"/>
-        <div class="h5">App Development</div>
+        <div class="h5">Flutter App Development</div>
       </div>
     </div>
   </div>
@@ -174,13 +174,13 @@
       <div class="row">
         <div class="col-md-5">
           <div class="py-1">
-            <div class="d-flex text-small fw-bolder"><span class="me-auto">HTML5</span><span>90%</span></div>
+            <div class="d-flex text-small fw-bolder"><span class="me-auto">Dialogflow</span><span>90%</span></div>
             <div class="progress my-1">
               <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="100" data-aos-anchor=".skills-section" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
           <div class="py-1">
-            <div class="d-flex text-small fw-bolder"><span class="me-auto">CSS3</span><span>90%</span></div>
+            <div class="d-flex text-small fw-bolder"><span class="me-auto">React</span><span>90%</span></div>
             <div class="progress my-1">
               <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="200" data-aos-anchor=".skills-section" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
@@ -192,7 +192,7 @@
             </div>
           </div>
           <div class="py-1">
-            <div class="d-flex text-small fw-bolder"><span class="me-auto">React</span><span>75%</span></div>
+            <div class="d-flex text-small fw-bolder"><span class="me-auto">Alexa Skill Kit</span><span>75%</span></div>
             <div class="progress my-1">
               <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="300" data-aos-anchor=".skills-section" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
@@ -200,25 +200,25 @@
         </div>
         <div class="col-md-5 offset-md-2">
           <div class="py-1">
-            <div class="d-flex text-small fw-bolder"><span class="me-auto">3D Modeling</span><span>80%</span></div>
+            <div class="d-flex text-small fw-bolder"><span class="me-auto">ManyChat</span><span>80%</span></div>
             <div class="progress my-1">
               <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="400" data-aos-anchor=".skills-section" style="width: 80%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
           <div class="py-1">
-            <div class="d-flex text-small fw-bolder"><span class="me-auto">Content Writing</span><span>90%</span></div>
+            <div class="d-flex text-small fw-bolder"><span class="me-auto">Flutter</span><span>90%</span></div>
             <div class="progress my-1">
               <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="500" data-aos-anchor=".skills-section" style="width: 90%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
           <div class="py-1">
-            <div class="d-flex text-small fw-bolder"><span class="me-auto">React Native</span><span>70%</span></div>
+            <div class="d-flex text-small fw-bolder"><span class="me-auto"></span>Freelancing<span>90%</span></div>
             <div class="progress my-1">
               <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="600" data-aos-anchor=".skills-section" style="width: 70%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
           <div class="py-1">
-            <div class="d-flex text-small fw-bolder"><span class="me-auto">Photoshop</span><span>80%</span></div>
+            <div class="d-flex text-small fw-bolder"><span class="me-auto">Project Management & Design Thinking</span><span>80%</span></div>
             <div class="progress my-1">
               <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="600" data-aos-anchor=".skills-section" style="width: 80%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
@@ -240,14 +240,14 @@
           <div class="card-header px-3 py-2">
             <div class="d-flex justify-content-between">
               <div>
-                <h1 class="h5 mb-1">Content Writing ✍ </h1>
+                <h1 class="h5 mb-1">Web Designing & Development</h1>
                 <!-- <div class="text-muted text-small">Designerr Inc. <small>(2012-2014)</small></div> -->
               </div><img src="images/services/ui-ux.svg" width="48" height="48" alt="ui-ux"/>
             </div>
           </div>
           <div class="card-body px-3 py-2">
-            <p>Content Writing is my ever first experince, before this i am not doing any project related to content writing</p>
-            <p>But there is a good knowladge related to SEO writing being a web developer.</p>
+            <p>3 Year Experience of Web Desiging and Development and also working on different freelance site and local costumers also.
+              There are different type of Designing and Development I was done like Landing-Page Designing, E-Commerce site, Portfolio website</p>
           </div>
         </div>
       </div>
@@ -256,7 +256,7 @@
           <div class="card-header px-3 py-2">
             <div class="d-flex justify-content-between">
               <div>
-                <h1 class="h5 mb-1">3D Photography 📸 </h1>
+                <h1 class="h5 mb-1">Natural Language Processing (NLP) </h1>
                 <!-- <div class="text-muted text-small">MakeMyApp LLC. <small>(2015-2018)</small></div> -->
               </div><img src="images/services/app-development.svg" width="48" height="48" alt="app development"/>
             </div>
@@ -272,12 +272,12 @@
           <div class="card-header px-3 py-2">
             <div class="d-flex justify-content-between">
               <div>
-                <h3 class="h5 mb-1">Web Design 🎨 </h3>
+                <h3 class="h5 mb-1">Alexa Skill Kit</h3>
               </div><img src="images/services/web-design.svg" width="48" height="48" alt="web design"/>
             </div>
           </div>
           <div class="card-body px-3 py-2">
-            <p>1 Year Experience of Web  Desiging and Development and also working on different freelance site and local costumers also. There is different type of designing i done like Landing-Page Designing, E-Commerce site, Portfolio website </p>
+            <p>The Alexa Skills Kit (ASK) is a software development framework that enables you to create content. Skills are like apps for Alexa. With an interactive voice interface, Alexa gives users a hands-free way to interact with your skill. </p>
           </div>
         </div>
       </div>
@@ -286,13 +286,13 @@
           <div class="card-header px-3 py-2">
             <div class="d-flex justify-content-between">
               <div>
-                <h1 class="h5 mb-1">Teaching 👨‍🏫 </h1>
+                <h1 class="h5 mb-1">Mobile App development 👨‍🏫 </h1>
               </div><img src="images/services/full-stack.svg" width="48" height="48" alt="full stack"/>
             </div>
           </div>
           <div class="card-body px-3 py-2">
-            <p>2 Years teaching Experince and Physics and Maths course instructor in Sir Shamim's Fahad Commerce Coaching Center. Also Give online and onside Home tution related to computer  </p>
-            <p>
+            <p> Flutter is an open-source software development kit which enables smooth and easy cross-platform mobile app development. You can build high quality natively compiled apps for iOS and Android quickly,
+              without having to write the code for the two apps separately. All you need is one codebase for both platforms <p>
               
             
             </p>
