--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
           <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
           <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
-          <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>
+          <!-- <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li> -->
           <li class="nav-item"><a class="nav-link" href="#experience">Experience</a></li>
           <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
         </ul>
@@ -112,8 +112,8 @@
           <div class="row">
             <div class="col-md-6">
               <h2 class="h4 my-2">Hello! I’m Hammad sheikh</h2>
-              <p>I am passionate about UI/UX design and Web Design. I am a skilled front-end developer and master of
-                graphic design tools such as Photoshop and Sketch. I am a quick learner and a team worker that gets the
+              <p>I am skilfull Web & NLP developer and expert of Dialogflow tools for builing chatbots and Voice
+                applications. I am a quick learner and a team worker that gets the
                 job done. I can easily capitalize on low hanging fruits and quickly maximize timely deliverables for
                 real-time schemas.</p>
               <div class="row mt-3">
@@ -156,8 +156,7 @@
               </div>
             </div>
             <div class="col-md-5 offset-md-1" data-aos="fade-left" data-aos-delay="100"><img
-                class="avatar img-fluid mt-2" src="images\clients\_MG_6748.jpg" width="400" height="400"
-                alt="Walter Patterson" /></div>
+                class="avatar img-fluid mt-2" src="images\clients\im.jpg" width="400" height="400"></div>
           </div>
         </div>
       </div>
@@ -177,15 +176,15 @@
             </div>
             <div class="col-md-3 text-center" data-aos="fade-up" data-aos-delay="100"><img class="mb-2"
                 src="images/services/web-design.svg" width="96" height="96" alt="web design" />
-              <div class="h5">3D Photography</div>
+              <div class="h5">Natural Language Processing</div>
             </div>
             <div class="col-md-3 text-center" data-aos="fade-up" data-aos-delay="300"><img class="mb-2"
                 src="images/services/ui-ux.svg" width="96" height="96" alt="ui-ux" />
-              <div class="h5">Content Writing</div>
+              <div class="h5">Website Development</div>
             </div>
             <div class="col-md-3 text-center" data-aos="fade-up" data-aos-delay="400"><img class="mb-2"
                 src="images/services/app-development.svg" width="96" height="96" alt="app development" />
-              <div class="h5">App Development</div>
+              <div class="h5">Flutter Development</div>
             </div>
           </div>
         </div>
@@ -238,7 +237,8 @@
               </div>
               <div class="col-md-5 offset-md-2">
                 <div class="py-1">
-                  <div class="d-flex text-small fw-bolder"><span class="me-auto">3D Modeling</span><span>80%</span>
+                  <div class="d-flex text-small fw-bolder"><span class="me-auto">Natural Language
+                      Processing</span><span>80%</span>
                   </div>
                   <div class="progress my-1">
                     <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right"
@@ -247,7 +247,8 @@
                   </div>
                 </div>
                 <div class="py-1">
-                  <div class="d-flex text-small fw-bolder"><span class="me-auto">Content Writing</span><span>90%</span>
+                  <div class="d-flex text-small fw-bolder"><span class="me-auto">Google
+                      Dialogflow</span><span>90%</span>
                   </div>
                   <div class="progress my-1">
                     <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right"
@@ -265,7 +266,8 @@
                   </div>
                 </div>
                 <div class="py-1">
-                  <div class="d-flex text-small fw-bolder"><span class="me-auto">Photoshop</span><span>80%</span></div>
+                  <div class="d-flex text-small fw-bolder"><span class="me-auto">Blockchain Smart
+                      Contracts</span><span>80%</span></div>
                   <div class="progress my-1">
                     <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right"
                       data-aos-delay="600" data-aos-anchor=".skills-section" style="width: 80%" aria-valuenow="60"
