--- a/index.html
+++ b/index.html
@@ -80,19 +80,22 @@
                 <div class="mt-5">
                   <p class="lead text-uppercase mb-1">Hello!</p>
                   <h1 class="intro-title marker" data-aos="fade-left" data-aos-delay="50">I’m Hammad sheikh</h1>
-                  <p class="lead fw-normal mt-3" data-aos="fade-up" data-aos-delay="100">Web & App Developer</p>
+                  <p class="lead fw-normal mt-3" data-aos="fade-up" data-aos-delay="100">WEB & NLP Developer</p>
                   <div class="social-nav" data-aos="fade-up" data-aos-delay="200">
                     <nav role="navigation">
                       <ul class="nav justify-content-left">
+                        <li class="nav-item"><a class="nav-link" href="https://www.github.com/hammad-air/"
+                             title="Github"><i class="fab fa-github"></i><span
+                               class="menu-title sr-only">github</span></a></li>      
+                        <li class="nav-item"><a class="nav-link" href="https://www.linkedin.com/in/hammad-nadeem-6673981b5/"
+                            title="LinkedIn"><i class="fab fa-linkedin"></i><span
+                                class="menu-title sr-only">LinkedIn</span></a></li>
                         <li class="nav-item"><a class="nav-link" href="https://twitter.com/hammadn41682952"
                             title="Twitter"><i class="fab fa-twitter"></i><span
                               class="menu-title sr-only">Twitter</span></a></li>
                         <li class="nav-item"><a class="nav-link" href="https://www.facebook.com/hammad.nadeem.50767p"
                             title="Facebook"><i class="fab fa-facebook"></i><span
                               class="menu-title sr-only">Facebook</span></a></li>
-                        <li class="nav-item"><a class="nav-link" href="https://www.instagram.com/hammad2980/"
-                            title="Instagram"><i class="fab fa-instagram"></i><span
-                              class="menu-title sr-only">Instagram</span></a></li>
                         <!-- <li class="nav-item"><a class="nav-link" href="https://www.linkedin.com/" title="LinkedIn"><i class="fab fa-linkedin"></i><span class="menu-title sr-only">LinkedIn</span></a></li> -->
                       </ul>
                     </nav>
@@ -203,7 +206,7 @@
             <div class="row">
               <div class="col-md-5">
                 <div class="py-1">
-                  <div class="d-flex text-small fw-bolder"><span class="me-auto">HTML5</span><span>90%</span></div>
+                  <div class="d-flex text-small fw-bolder"><span class="me-auto">JavaScript</span><span>90%</span></div>
                   <div class="progress my-1">
                     <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right"
                       data-aos-delay="100" data-aos-anchor=".skills-section" style="width: 90%" aria-valuenow="90"
@@ -211,7 +214,7 @@
                   </div>
                 </div>
                 <div class="py-1">
-                  <div class="d-flex text-small fw-bolder"><span class="me-auto">CSS3</span><span>90%</span></div>
+                  <div class="d-flex text-small fw-bolder"><span class="me-auto">Google Dialogflow</span><span>90%</span></div>
                   <div class="progress my-1">
                     <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right"
                       data-aos-delay="200" data-aos-anchor=".skills-section" style="width: 90%" aria-valuenow="90"
@@ -219,7 +222,7 @@
                   </div>
                 </div>
                 <div class="py-1">
-                  <div class="d-flex text-small fw-bolder"><span class="me-auto">JavaScript</span><span>80%</span></div>
+                  <div class="d-flex text-small fw-bolder"><span class="me-auto">React JS</span><span>80%</span></div>
                   <div class="progress my-1">
                     <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right"
                       data-aos-delay="300" data-aos-anchor=".skills-section" style="width: 80%" aria-valuenow="80"
@@ -227,7 +230,7 @@
                   </div>
                 </div>
                 <div class="py-1">
-                  <div class="d-flex text-small fw-bolder"><span class="me-auto">React</span><span>75%</span></div>
+                  <div class="d-flex text-small fw-bolder"><span class="me-auto">Python</span><span>75%</span></div>
                   <div class="progress my-1">
                     <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right"
                       data-aos-delay="300" data-aos-anchor=".skills-section" style="width: 75%" aria-valuenow="75"
@@ -247,8 +250,7 @@
                   </div>
                 </div>
                 <div class="py-1">
-                  <div class="d-flex text-small fw-bolder"><span class="me-auto">Google
-                      Dialogflow</span><span>90%</span>
+                  <div class="d-flex text-small fw-bolder"><span class="me-auto">Communication & Networking</span><span>90%</span>
                   </div>
                   <div class="progress my-1">
                     <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right"
@@ -257,7 +259,7 @@
                   </div>
                 </div>
                 <div class="py-1">
-                  <div class="d-flex text-small fw-bolder"><span class="me-auto">React Native</span><span>70%</span>
+                  <div class="d-flex text-small fw-bolder"><span class="me-auto">Flutter</span><span>70%</span>
                   </div>
                   <div class="progress my-1">
                     <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right"
