--- a/index.html
+++ b/index.html
@@ -44,8 +44,33 @@
     </style>
 
   </noscript>
-</head>
+  
+  <style>
+    .float {
+        position: fixed;
+        width: 60px;
+        height: 60px;
+        bottom: 30px;
+        right: 1400px;
+        background-color: #25d366;
+        color: #FFF;
+        border-radius: 50px;
+        text-align: center;
+        font-size: 30px;
+        box-shadow: 2px 2px 3px #999;
+        z-index: 100;
+    }
 
+    .my-float {
+        margin-top: 16px;
+    }
+</style>
+  
+</head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <a href="https://api.whatsapp.com/send/?phone=%2B923453191638&text&app_absent=0" class="float" target="_blank">
+        <i class="fa fa-whatsapp my-float"></i>
+    </a>
 <body id="top">
   <header class="bg-light">
     <nav class="navbar navbar-expand-lg navbar-light bg-light" id="header-nav" role="navigation">
@@ -101,7 +126,7 @@
                     </nav>
                   </div>
                   <div class="mt-3" data-aos="fade-up" data-aos-delay="200"><a
-                      class="btn btn-primary shadow-sm mt-1 hover-effect" href="#contact">Contact Me <i
+                      class="btn btn-primary shadow-sm mt-1 hover-effect" href="https://api.whatsapp.com/send/?phone=%2B923453191638&text&app_absent=0">Contact Me <i
                         class="fas fa-comments"></i></a></div>
                 </div>
               </div>
