--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   <header class="bg-light">
     <nav class="navbar navbar-expand-lg navbar-light bg-light" id="header-nav" role="navigation">
       <b>
-        <div class="container"><a class="link-dark navbar-brand site-title mb-0" href="#">Portfolio.Hammad</a>
+        <div class="container"><a class="link-dark navbar-brand site-title mb-0" href="#">Hammad Sheikh</a>
       </b>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span
